In dialogs & dialog-like bubbles, make the escape button just close the prompt.

Previously, the escape button would activate the negative button, which
was relevant if that button did anything extra in addition to closing
the prompt.

This intentionally changes the permissions bubble (back to what it
was before) as well as the bookmark bubble (now escape doesn't
remove a new bookmark). Other bubbles may be affected and
those changes are *probably* desired.

UX contacts for this decision are hwi@ and ainslie@

BUG=609079,163931

Review-Url: https://codereview.chromium.org/1953943003
Cr-Commit-Position: refs/heads/master@{#392708}

Former-commit-id: 0bf4ced694bba0aeb3ba518c7fe8435bc9018674