chrome/browser/ui/views/ssl_client_certificate_selector_browsertest.cc
@@ -291,15 +291,7 @@ class SSLClientCertificateSelectorMultiProfileTest
   SSLClientCertificateSelector* selector_1_;
 };
 
-#if defined(OS_LINUX) && !defined(OS_CHROMEOS) && defined(USE_AURA)
-// TODO(erg): linux_aura bringup: http://crbug.com/163931
-#define MAYBE_SelectNone DISABLED_SelectNone
-#else
-#define MAYBE_SelectNone SelectNone
-#endif
-
-
-IN_PROC_BROWSER_TEST_F(SSLClientCertificateSelectorTest, MAYBE_SelectNone) {
+IN_PROC_BROWSER_TEST_F(SSLClientCertificateSelectorTest, SelectNone) {
   EXPECT_CALL(*auth_requestor_.get(), CancelCertificateSelection());
 
   // Let the mock get checked on destruction.
